@@ -3,6 +3,9 @@ CHANGES.txt - 08/12/2002
 
 CHANGES IN CUPS V1.1.16
 
+	- Fixed a minor inconsistancy in the encoding of boolean
+	  attributes from printer options in
+	  cupsEncodeOptions().
 	- Added a FilterNice directive which sets the priority
 	  of job filter processes that are run by the scheduler.
 	- Added Solaris x86 USB printer support.
